--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -68,3 +68,36 @@ li .categoryList {
 #toppadingmenu {
 	padding-bottom: 110px;
 }
+input[type=radio] {
+-webkit-appearance:none;
+    width:20px;
+    height:20px;
+    border:1px solid darkgray;
+    border-radius:50%;
+    outline:none;
+    margin-right: 8px;
+    box-shadow:0 0 5px 0px gray inset;
+}
+input[type='radio']:checked:before {
+    background:green;
+}
+input[type='radio']:hover {
+    box-shadow:0 0 5px 0px orange inset;
+}
+input[type='radio']:before {
+    content:'';
+    display:block;
+    width:60%;
+    height:60%;
+    margin: 20% auto;    
+    border-radius:50%;    
+}
+.shareSocial{
+	float: right;
+	width: 20%;
+	height: auto;
+	padding-top: 5px;
+	
+	text-align:right;
+	border-top: 1px green;
+}
