--- a/src/main/webapp/resources/cms/myCss/email.css
+++ b/src/main/webapp/resources/cms/myCss/email.css
@@ -88,7 +88,7 @@
   margin: 10px 0 0;
   display: inline-block;
   right: 0;
-  margin-left: 25px;
+  /* margin-left: 25px; */
 }
 .inbox__list-subject {
   font-weight: 900;
